0.29:
 * SVN built-in support.
 * CVS (when cvs2cl is installed) built-in support.
 * Made camera behaviour when zooming and selecting objects more intuitive.
 * Added mouse-over tool tips.
 * Added --highlight-colour option.
 * Added --hash-seed option. The S key now randomizes colours.
 * Added --output-custom-log option.
 * Exposed --time-scale option (previously only available interactively).
 * Removed arbitrary 1024 maximum length limit for log lines.
 * Fixed two file colouring bugs (quoted files from git, period in file path).
 * Fix handling of avatars for UTF-8 usernames on MACOSX (Christian Köstlin).
 * Recover from video mode failing to set due to multi-sampling (Siddhesh Poyarekar).

0.28:
 * Bazaar support for merged commits (Nick Moffit).
 * C++ efficiency improvements (Oliver Smith).
 * Improved cvs-exp log compatibility.
 * Re-show name of user when adding a new action if user is idle.
 * Added --padding option to control camera view padding.
 * More accurate camera tracking (tracks the bounding boxes of objects).
 * Improved automatic rotation logic.

0.27:
 * Display time stops at the time of the last commit.
 * Users fade out when end reached rather than ending abruptly.
 * Position slider is now hidden by default if recording a video.
 * Automatic camera rotation for better use of screen space.
 * Support international keyboards (Peter Kjellerstedt).
 * C++ efficiency improvements (Jacob Metcalfe).
 * Fixed crash when reading from STDIN.
 * Fixed intermittent crash closing Gource when using --output-ppm-stream.
 * Added ini style config file support (see --load/save-config).
 * Added screenshot button (F12). Screenshots respect the alpha channel.
 * Added --transparent to make the background see-through (for screenshots).
 * Added --logo and --background-image options.
 * Added --dont-stop option for manual exiting when recording videos.
 * Added --stop-at-time option to stop Gource after a number of seconds.
 * Added --hide 'mouse' option.