@@ -76,6 +76,9 @@ Font size.
 \fB\-\-font\-colour FFFFFF\fR
 Font colour in hex.
 .TP
+\fB\-\-key\fR
+Show file extension key.
+.TP
 \fB\-\-logo IMAGE\fR
 Logo to display in the foreground.
 .TP
@@ -301,15 +304,17 @@ Interactive keyboard commands:
 .ti 10
 (C)   Displays Gource logo
 .ti 10
-(M)   Toggle mouse visibility.
+(K)   Toggle file extension key
 .ti 10
-(N)   Jump forward in time to next log entry.
+(M)   Toggle mouse visibility
 .ti 10
-(S)   Randomize colours.
+(N)   Jump forward in time to next log entry
 .ti 10
-(+-)  Adjust simulation speed.
+(S)   Randomize colours
 .ti 10
-(<>)  Adjust time scale.
+(+-)  Adjust simulation speed
+.ti 10
+(<>)  Adjust time scale
 .ti 10
 (TAB) Cycle through visible users
 .ti 10
