@@ -51,6 +51,8 @@ public:
 
     bool disable_auto_rotate;
 
+    bool show_key;
+    
     std::string load_config;
     std::string save_config;
     std::string path;
